--- a/inst/NEWS
+++ b/inst/NEWS
@@ -17,7 +17,7 @@ o RELEASE 1.20.0
 - Now supports SOCKET, PVM and MPI clusters. Manual corrected accordingly.
 - Minor updates in the email addresses and references.
 ---------------------------------------------------------------------------------
-Date   : 2015-03-04
+Date   : 2015-03-08
 o RELEASE 1.30.0
 - Packages in Depends field are now imported from the NAMESPACE file.
 - Compiled C code now uses the interface to R internal RNGs routines instead of the system rand RNG.
@@ -26,7 +26,7 @@ o RELEASE 1.30.0
 - Main function mvr() now returns shrinkage estimates of means and standard deviations by groups. 
 - Improved codes for all plotting functions, including new graphical device arguments.
 - Updates in the manual: examples are given for a SOCKET or MPI cluster configuration.
-- Updated manual, citations and version number.
+- Removed internal functions from the manual, updated manual, version number.
 - Test build under 3.0.2 and release update to GitHub.
 ---------------------------------------------------------------------------------
 
