--- a/inst/NEWS
+++ b/inst/NEWS
@@ -66,13 +66,12 @@ PACKAGE INSTALLATION
 - Updated documentation, Rd, DESCRIPTION, NEWS and NAMESPACE files.  
 - Built and tested under R version 3.4.0 (2017-04-21) and release update to GitHub.
 ---------------------------------------------------------------------------------
-Date   : 2017-09-08
+Date   : 2017-10-11
 o RELEASE 1.32.1
 BUG FIXES
 - NA values are now correctly handled in the internal function `is.empty()`.
 PACKAGE INSTALLATION
-- Minor updates in documentation files (DESCRIPTION and NEWS).
-- Built and tested under R version 3.4.1 (2017-06-30) and release update to GitHub.
+- Minor updates in documentation files (DESCRIPTION, NEWS and README).
+- Built and tested under R version 3.4.2 (2017-09-28) and release update to GitHub.
 ---------------------------------------------------------------------------------
-
 
