--- a/inst/NEWS
+++ b/inst/NEWS
@@ -23,7 +23,7 @@ o RELEASE 1.30.1
 - Compiled C code now uses the interface to R internal RNGs routines instead of the system rand RNG.
 - Compiled C code now successfully passes Valgrind memory check. 
 - Removed superfluous codes in the parallelization section, before clusterCall().
-- Main function mvr() now returns shrinkage estimates of means and standard deviations by groups. 
+- Main function `mvr()` now returns shrinkage estimates of means and standard deviations by groups. 
 - Improved codes for all plotting functions, including new graphical device arguments.
 - Updates in the manual: examples are given for a SOCKET or MPI cluster configuration.
 - Removed internal functions from the manual, updated manual, version number.
@@ -86,6 +86,20 @@ PACKAGE INSTALLATION
 - Minor updates in manual and documentation files (Rd files).
 - Minor updates in documentation files (DESCRIPTION, NEWS, and README).
 - Built and tested under R version 3.5.1 (2018-07-02) and release update to GitHub.
+---------------------------------------------------------------------------------
+Date   : 2019-03-07
+o RELEASE 1.34.0
+SIGNIFICANT USER-VISIBLE CHANGES
+- Renamed objects returned by end-user functions `mvr()` and `mvrt.test()` as `MVR` and `MVRT`, respectively.
+BUG FIXES
+- Argument `block` now correctly handles the case of a factor when the option `labels`
+  or `levels` is not used to define the factor, which could cause its levels to not 
+  match the data groups.
+- `Xraw` and `Xmvr` values of `MVR` object now correctly returns a matrix in all cases.
+PACKAGE INSTALLATION
+- Minor updates in manual and documentation files (Rd files).
+- Minor updates in documentation files (DESCRIPTION, NEWS, and README).
+- Built and tested under R version 3.5.2 (2018-12-20) and release update to GitHub.
 ---------------------------------------------------------------------------------
 
 
